# binary_search

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  binary_search.vix  vix.json
include/binary_search/: binary_search.hpp
tests/: test_basic.cpp
